ready to publsih before removing assets

--- a/advanced-setup-guides/manually-resize-disk-after-plan-upgrade-on-live-linux-systems.mdx
+++ b/advanced-setup-guides/manually-resize-disk-after-plan-upgrade-on-live-linux-systems.mdx
@@ -17,7 +17,7 @@ To resize disk space and unallocated space on your disk, use SystemRescueCD. The
 Remember, modifying disk partitions and file systems can be risky and may result in data loss, especially if there's a power interruption or if the operations are performed incorrectly. Always back up important data before proceeding.
 Here’s a general guide on how to resize disk space manually:
 
-## Access the VPS Management Portal
+## Access the EDBB VPS Portal
 
 After the Upgrade was confirmed ...
 
