--- a/faq/what-is-a-kvm-vps.mdx
+++ b/faq/what-is-a-kvm-vps.mdx
@@ -66,4 +66,4 @@ Yes. Plesk, cPanel, DirectAdmin, or any similar stack functions normally on a KV
 
 KVM gives you the control of a dedicated server with the convenience of EDBB’s portal and automation tools.
 
-<CtaButton label="Review VPS Management Features" link="/vps-management/vps-management-portal" />
+<CtaButton label="Explore the VPS Control Center" link="/vps-management/vps-management-portal" />
