--- a/index.mdx
+++ b/index.mdx
@@ -105,15 +105,15 @@ Tap the blue **chat bubble** in the corner to connect with support without leavi
 ---
 
 <CardGroup cols={4}>
-  <Card title="Get Started" icon={<StartIcon />} href="/getting-started/check-your-inbox">
-    Follow step-by-step onboarding to bring your VPS online quickly.
+  <Card title="Onboarding Hub" icon={<StartIcon />} href="/getting-started/check-your-inbox">
+    Follow the guided setup flow to bring your VPS online quickly.
   </Card>
 
-  <Card title="VPS Management" icon={<PanelIcon />} href="/vps-management/vps-management-portal">
+  <Card title="VPS Control Center" icon={<PanelIcon />} href="/vps-management/vps-management-portal">
     Learn how to administer power, storage, networking, and rebuilds.
   </Card>
 
-  <Card title="VPS FAQs" icon={<FaqIcon />} href="/faq/what-is-a-virtual-private-server">
+  <Card title="Help & Answers" icon={<FaqIcon />} href="/faq/what-is-a-virtual-private-server">
     Browse concise answers to the questions customers ask most.
   </Card>
 
