--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "EDBB VPS Documentation Home"
-sidebarTitle: "Start Here"
+sidebarTitle: "Getting Started"
 description: "Explore the essential guides for launching, securing, and managing your EDBB VPS."
 ---
 
