Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -105,7 +105,7 @@ Tap the blue **chat bubble** in the corner to connect with support without leavi
 ---
 
 <CardGroup cols={4}>
-  <Card title="Onboarding Hub" icon={<StartIcon />} href="/quick-launch">
+  <Card title="Quick Launch" icon={<StartIcon />} href="/quick-launch">
     Follow the guided setup flow to bring your VPS online quickly.
   </Card>
 
