Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -71,36 +71,18 @@ export const MikrotikIcon = () => (
   </svg>
 );
 
----
+# Welcome to EDBB Docs! 🚀
 
-# Welcome Aboard 🚀
-
-You’ve reached the knowledge base for **EDBB (ED Backbone & Co.)** — a VPS platform built and operated by a veteran infrastructure team obsessed with reliability.
-
-Established in **2023** with services going live in **October 2025**, EDBB delivers both **Linux** and **Windows** VPS plans backed by enterprise-grade hardware, experienced network engineering, and a global footprint designed for low latency.
-
-Our promise:
-> **Deliver stable VPS hosting that blends individual control with worldwide reliability.**
+Welcome to the official documentation hub for **EDBB (ED Backbone & Co)** — your gateway to efficient, dependable VPS hosting built on the trusted **EDIS Global** backbone.
 
 ---
 
-## Why Teams Choose EDBB
+## Docs Overview
 
-- **Linux VPS** with unrestricted root shells
-- **Windows VPS** featuring Administrator-level RDP
-- **Consistently low latency** across all footprints
-- **Tier III facilities** in strategic global regions
-- **Cloud-Init automation** for fast operating system rollouts
+EDBB Docs is your one-stop resource for managing, configuring, and understanding your VPS. We’re continuously expanding this content — new articles are being added every week.
 
----
-
-## Docs at a Glance
-
-This documentation space compiles everything you need to provision, administer, and troubleshoot your VPS.
-We refresh the library frequently, so expect new walkthroughs, tooling tips, and best practices on a regular basis.
-
-Need to talk with a specialist?
-Tap the blue **chat bubble** in the corner to connect with support without leaving the page.
+Need help right now?
+Click the blue **chat icon** below to reach our support team instantly.
 
 ---
 
