Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,7 +1,7 @@
 ---
-title: "EDBB VPS Documentation Home"
+title: "Getting Started with Your VPS"
 sidebarTitle: "Getting Started"
-description: "Explore the essential guides for launching, securing, and managing your EDBB VPS."
+description: "Welcome to EDBB Docs - Essential guides for launching, securing, and managing your VPS."
 ---
 
 export const accentColor = "#3857e8";
@@ -71,7 +71,7 @@ export const MikrotikIcon = () => (
   </svg>
 );
 
-# Welcome to EDBB Docs! 🚀
+## Welcome to EDBB Docs! 🚀
 
 Welcome to the official documentation hub for **EDBB (ED Backbone & Co)** — your gateway to efficient, dependable VPS hosting built on the trusted **EDIS Global** backbone.
 
@@ -88,19 +88,19 @@ Click the blue **chat icon** below to reach our support team instantly.
 
 <CardGroup cols={4}>
   <Card title="Quick Launch" icon={<StartIcon />} href="/quick-launch">
-    Follow the guided setup flow to bring your VPS online quickly.
+    Quick-start guides to launch your VPS in minutes
   </Card>
 
-  <Card title="VPS Control Center" icon={<PanelIcon />} href="/vps-management/vps-management-portal">
-    Learn how to administer power, storage, networking, and rebuilds.
+  <Card title="VPS Management" icon={<PanelIcon />} href="/vps-management/vps-management-portal">
+    Manage and optimize your VPS
   </Card>
 
-  <Card title="Help & Answers" icon={<FaqIcon />} href="/faq/what-is-a-virtual-private-server">
-    Browse concise answers to the questions customers ask most.
+  <Card title="VPS FAQs" icon={<FaqIcon />} href="/faq/what-is-a-virtual-private-server">
+    Find answers to common technical questions.
   </Card>
 
   <Card title="IP Change" icon={<IpIcon />} href="/faq/ip-addresses/change-ip-address">
-    Discover how to request or swap public IP addresses safely.
+    Options to safely change your VPS IP address.
   </Card>
 
   <Card title="Network Tools" icon={<VlanIcon />} href="/faq/ip-addresses/ping-test-ip">
@@ -108,15 +108,15 @@ Click the blue **chat icon** below to reach our support team instantly.
   </Card>
 
   <Card title="Reinstall" icon={<ReinstallIcon />} href="/vps-management/autoinstall-reinstall-install-vps-linux-windows">
-    Redeploy your preferred operating system whenever you need a clean slate.
+    Reinstall your OS — Linux or Windows — in one click.
   </Card>
 
   <Card title="MikroTik Guide" icon={<MikrotikIcon />} href="/advanced-setup-guides/script-based-mikrotik-router-os-installation-guide-winbox">
-    Automate MikroTik Cloud Hosted Router installs with a battle-tested script.
+    MikroTik CHR installs with a battle-tested script.
   </Card>
 
   <Card title="Billing Workflow" icon={<BillingIcon />} href="/faq/billing-lifecycle/automated-vps-billing-workflow">
-    Understand invoices, renewals, and account balances at a glance.
+    Understand when we send invoices, reminders and connected workflows.
   </Card>
 </CardGroup>
 
