Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -71,18 +71,16 @@ export const MikrotikIcon = () => (
   </svg>
 );
 
-## Welcome to EDBB Docs! 🚀
+## Welcome to EDBB Docs!
 
 Welcome to the official documentation hub for **EDBB (ED Backbone & Co)** — your gateway to efficient, dependable VPS hosting built on the trusted **EDIS Global** backbone.
 
----
 
-## Docs Overview
+### Getting Started with Your VPS 🚀
 
-EDBB Docs is your one-stop resource for managing, configuring, and understanding your VPS. We’re continuously expanding this content — new articles are being added every week.
+Everything you need to configure, manage, and secure your VPS — built on the trusted EDIS Global infrastructure.  
+Need help? Click the blue **chat icon** below to reach support instantly.
 
-Need help right now?
-Click the blue **chat icon** below to reach our support team instantly.
 
 ---
 
@@ -108,7 +106,7 @@ Click the blue **chat icon** below to reach our support team instantly.
   </Card>
 
   <Card title="Reinstall" icon={<ReinstallIcon />} href="/vps-management/autoinstall-reinstall-install-vps-linux-windows">
-    Reinstall your OS — Linux or Windows — in one click.
+    Reinstall your OS: Linux or Windows in just a few clicks.
   </Card>
 
   <Card title="MikroTik Guide" icon={<MikrotikIcon />} href="/advanced-setup-guides/script-based-mikrotik-router-os-installation-guide-winbox">
