Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Getting Started with Your VPS"
 sidebarTitle: "Getting Started"
-description: "Welcome to EDBB Docs - Essential guides for launching, securing, and managing your VPS."
+description: "Quick-start your VPS with EDBB Docs — setup, management, and troubleshooting guides in one place."
 ---
 
 export const accentColor = "#3857e8";
@@ -71,16 +71,12 @@ export const MikrotikIcon = () => (
   </svg>
 );
 
-## Welcome to EDBB Docs!
+## Getting Started with Your VPS 🚀
 
-Welcome to the official documentation hub for **EDBB (ED Backbone & Co)** — your gateway to efficient, dependable VPS hosting built on the trusted **EDIS Global** backbone.
+Your VPS is ready — now let’s get it running smoothly.  
+At **EDBB Docs**, you’ll find quick-start guides, management tips, and security best practices — all built on **EDIS Global’s infrastructure** for performance and reliability.
 
-
-### Getting Started with Your VPS 🚀
-
-Everything you need to configure, manage, and secure your VPS — built on the trusted EDIS Global infrastructure.  
-Need help? Click the blue **chat icon** below to reach support instantly.
-
+Need assistance? Click the blue **chat icon** below to connect with our team.
 
 ---
 
