Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Getting Started with Your VPS"
 sidebarTitle: "Getting Started"
-description: "Quick-start your VPS with EDBB Docs — setup, management, and troubleshooting guides in one place."
+description: "Essential EDBB guides for launching, securing, and managing your VPS with confidence."
 ---
 
 export const accentColor = "#3857e8";
@@ -73,15 +73,15 @@ export const MikrotikIcon = () => (
 
 ## Getting Started with Your VPS 🚀
 
-Your VPS is ready — now let’s get it running smoothly.  
-At **EDBB Docs**, you’ll find quick-start guides, management tips, and security best practices — all built on **EDIS Global’s infrastructure** for performance and reliability.
+Your VPS is ready — let’s get it running smoothly.  
+In **EDBB Docs**, you’ll find quick-start guides, management tips, and security best practices to help you make the most of your server.
 
 Need assistance? Click the blue **chat icon** below to connect with our team.
 
 ---
 
 <CardGroup cols={4}>
-  <Card title="Quick Launch" icon={<StartIcon />} href="/quick-launch">
+  <Card title="Quick Start" icon={<StartIcon />} href="/quick-start">
     Quick-start guides to launch your VPS in minutes
   </Card>
 
