Documentation edits made through Mintlify web editor

--- a/no-email-received.mdx
+++ b/no-email-received.mdx
@@ -1,40 +1,28 @@
 ---
-title: "Missing Welcome Email?"
-sidebarTitle: "Email Delayed?"
-description: "If the initial credential email never reached you, follow these steps to reinstall your VPS with a password you control."
+title: "No email received?"
+description: "If you did not receive the email with your VPS credentials, there's no need to worry. Install your VPS with fresh password and the OS of your choice. Instructions for installing Linux/Windows are provided."
 ---
 
 import { CtaButton } from "/snippets/cta-button.mdx";
 
-## Why We Can't Reissue Password Emails
+## We can not send emails again!
 
-If the message containing your VPS login details didn’t arrive, here’s what to expect:
+If you did not receive our email with VPS credentials:
 
-<Info>
-For security and compliance, **we never resend credentials or store plain-text passwords**.  
-The fastest way to regain access is to trigger a reinstall, choose your preferred operating system, and set a new password during the process.
-</Info>
+<Info> We can't resend passwords! We can't resend emails which contain credentials or passwords. For security reasons, we don’t store your passwords. Don't worry, you can easily set up your service without our Welcome Email.</Info>
 
----
-
-## 🔧 Regain Control in Three Steps
+## How to Access Your New VPS
 
 <Steps>
-  <Step title="Open the EDBB Management Dashboard">
-    To open the panel, visit the <a href="https://my.edbb.com" target="_blank" rel="noreferrer">EDBB VPS Portal</a>.
+  <Step title="Log in to your">
+    [Control Panel](https://my.edbb.com/clientarea.php)
   </Step>
 
-  <Step title="Select the affected VPS under Services" />
+  <Step title="Locate your VPS in the Services tab" />
 
-  <Step title="Reinstall with a fresh OS and credentials you define">
+  <Step title="Reinstall your VPS with a fresh OS and your own password">
     <CtaButton label="Linux and Windows Reinstall Guide" link="/vps-management/autoinstall-reinstall-install-vps-linux-windows" />
   </Step>
 </Steps>
 
-<Info>
-Reinstalling does not trigger a new email. The credentials you enter during the reinstall become the active login details.
-</Info>
-
----
-
-🟦 **Quick reminder:** Bookmark the [EDBB VPS Portal](https://my.edbb.com) so your VPS information is always one click away.
+<Info>Reinstalling does not trigger a new Welcome Email. The password you specify during reinstall will be the password to access your OS</Info>
