Documentation edits made through Mintlify web editor

--- a/no-email-received.mdx
+++ b/no-email-received.mdx
@@ -25,4 +25,4 @@ If you did not receive our email with VPS credentials:
   </Step>
 </Steps>
 
-<Info>Reinstalling does not trigger a new Welcome Email. The password you specify during reinstall will be the password to access your OS</Info>
+<Info>We do not send a new Welcome Email when you reinstall! The password you specify during installation will be the password to access your OS</Info>
