Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -81,8 +81,8 @@ Need assistance? Click the blue **chat icon** below to connect with our team.
 ---
 
 <CardGroup cols={4}>
-  <Card title="Quick Start" icon={<StartIcon />} href="/quick-start">
-    Quick-start guides to launch your VPS in minutes
+  <Card title="Get Started" icon={<StartIcon />} href="/getting-started/check-your-inbox">
+    First things first. Start here to get going.
   </Card>
 
   <Card title="VPS Management" icon={<PanelIcon />} href="/vps-management/vps-management-portal">
