Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -81,7 +81,7 @@ Need assistance? Click the blue **chat icon** below to connect with our team.
 ---
 
 <CardGroup cols={4}>
-  <Card title="Get Started" icon={<StartIcon />} href="/getting-started/check-your-inbox">
+  <Card title="Get Started" icon={<StartIcon />} href="/check-your-inbox">
     First things first. Start here to get going.
   </Card>
 
