Documentation edits made through Mintlify web editor

--- a/check-your-inbox.mdx
+++ b/check-your-inbox.mdx
@@ -16,13 +16,13 @@ After ordering and receiving a payment confirmation, please keep an eye on your 
 
 ### What's in the Email?
 
-- Your VPS Primary **IPv4 address**
-- **Username **and**password** 
+- VPS Primary **IPv4 address**
+- **Username** and **Password** for the OS
 - **Operating system** and configuration details
-- A direct link to the **management dashboard**
-- Quick links to to this [knowledge base](https://docs.edbb.com) and our [Acceptable Use Policy](https://docs.edbb.com/acceptable-use-policy).
-- **Link to our **public [Statuspage](https://status.edbb.com).
+- A direct link to the [**Control Panel**](https://my.edbb.com)
+- Links to to this [Knowledge Base](https://docs.edbb.com) and to our [Acceptable Use Policy, AUP](https://docs.edbb.com/acceptable-use-policy).
+- Link to our public [Statuspage](https://status.edbb.com).
 
 ### Didn't Receive the Email?
 
-Check your spam folder and whitelist `support@edbb.com`. If nothing arrives within a few minutes, [follow this guide](https://docs.edbb.com/no-email-received) for troubleshooting steps.
+Check your spam folder and whitelist `support@edbb.com`. If nothing arrives within a few minutes, [follow this guide](https://docs.edbb.com/no-email-received) for the next steps.
