Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -76,7 +76,7 @@ export const MikrotikIcon = () => (
 Your VPS is ready — let’s get it running smoothly.  
 In **EDBB Docs**, you’ll find quick-start guides, management tips, and security best practices to help you make the most of your server.
 
-Need assistance? Click the blue **chat icon** below to connect with our team.
+Need assistance? Click the blue **Chat Icon** at the bottom of the page to connect with our team.
 
 ---
 
