Documentation edits made through Mintlify web editor

--- a/no-email-received.mdx
+++ b/no-email-received.mdx
@@ -9,7 +9,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
 If you did not receive our email with VPS credentials:
 
-<Info> We can't resend passwords! We can't resend emails which contain credentials or passwords. For security reasons, we don’t store your passwords. Don't worry, you can easily set up your service without our Welcome Email.</Info>
+<Info> We can't resend passwords! We can't resend Welcome Emails. For security reasons, we don’t store your passwords. Don't worry, you can easily set up your service with your own password!</Info>
 
 ## How to Access Your New VPS
 
