Documentation edits made through Mintlify web editor

--- a/how-our-support-team-helps-you.mdx
+++ b/how-our-support-team-helps-you.mdx
@@ -7,7 +7,7 @@ description: "Understand how EDBB Support assists with billing, troubleshooting 
 # Meet the EDBB Support Desk
 
 <Info>
-  Need a hand with the portal, an invoice, or figuring out your next troubleshooting step? EDBB Support is here 24/7 to point you in the right direction while keeping your VPS secure and under your control.
+  Our support team is your first point of contact for all billing-related inquiries and technical assistance. We’re here to provide quick and effective solutions and expert guidance, ensuring a smooth experience.
 </Info>
 
 Think of the support desk as your navigation partner: we help you decipher the platform, organise billing, and surface the best resources so you can stay productive.
@@ -16,49 +16,44 @@ Think of the support desk as your navigation partner: we help you decipher the p
 
 ## What We Handle (and How)
 
-- 💬 **Billing & Accounts** – clarify invoices, credit notes, renewals, payment methods, or ownership transfers.
-- 🧭 **Portal Coaching** – walk you through traffic pools, rDNS updates, snapshots, reinstalls, and other control panel features.
-- 🩺 **Troubleshooting Guidance** – review symptoms, suggest diagnostics, and link to targeted runbooks in the docs.
-- 🚨 **Escalations** – flag unusual behaviour for our infrastructure engineers when something needs deeper inspection.
+- 💬 **Billing & Accounts** – Questions about invoices, payments, or account management. We’ve got you covered.
+- 🧭 **Portal Coaching** – We walk you through traffic pool, rDNS updates, snapshots, reinstalls, and all other control panel features.
+- 🩺 **Troubleshooting Guidance** – We help diagnose common issues and point you to the right resources for troubleshooting.
+- 🚨 **Escalations** – We ensure you’re connected with the right experts when something needs deeper inspection.
 
-Whichever channel you prefer—live messenger or email—we’ll respond with clear steps and links you can action immediately.
-
----
-
-## Your Responsibilities as VPS Administrator
-
-To protect customer privacy and preserve a clean security posture, there are tasks only you (or someone you authorise) should perform.
-
-<Info>
-  ⚠️ EDBB Support does <strong>not</strong>:
-  <ul>
-    <li>Log in to your VPS, databases, or downstream services</li>
-    <li>Install packages, edit configuration files, or apply operating system patches</li>
-    <li>Open firewall ports, alter security groups, or transfer customer data</li>
-    <li>Change system-level passwords or manage user accounts inside your instance</li>
-  </ul>
-</Info>
-
-You keep the admin keys; we make sure the surrounding infrastructure and tooling stay reliable.
+Whichever channel you prefer - live messenger or email - we’ll respond with clear steps and links you can action immediately.
 
 ---
 
-## Need More Than a Nudge?
+## **Support Boundaries for Your Security 🚫**
 
-<Steps>
-  <Step title="Check the EDBB Docs Library">
-    The <a href="https://docs.edbb.com" target="_blank" rel="noreferrer">documentation hub</a> covers deployments, recoveries, and FAQs in depth. It’s usually the fastest way to confirm a setting or procedure.
-  </Step>
-  <Step title="Bring in a Systems Expert">
-    For custom stacks, migrations, audits, or security hardening, partner with a trusted freelancer or managed service provider who can work hands-on within your VPS.
-  </Step>
-  <Step title="Tap into the Community">
-    VPS forums, sysadmin groups, and professional networks often have real-world advice from peers running similar workloads.
-  </Step>
-</Steps>
+To ensure your privacy and security, our infrastructure-focused support does not include:
+
+- Logging into your VPS, databases or downstream services
+- Installing software or patches
+- Changing configurations
+- Updating passwords or ports
+- Migrating servers to another account or location
+
+We strictly operate as an infrastructure provider and do not access customer servers or perform software configurations. This ensures your data remains secure and private.
+
+---
+
+## **Get the Help You Need**
+
+Managing server-related tasks can be challenging. Here are the best ways to get assistance:
+
+#### Explore Our Knowledge Base 📚 
+Visit our Knowledge Base for articles and guides on troubleshooting, configurations, and more.
+
+#### Bring in a Systems Expert
+For custom stacks, migrations, audits, or security hardening, partner with a trusted freelancer or managed service provider who can work hands-on within your VPS.
+
+#### Tap into the Community
+VPS forums, sysadmin groups, and professional networks often have real-world advice from peers running similar workloads.
 
 ---
 
 ## We’re Ready When You Are
 
-Serving you well is core to the EDBB experience. Reach out whenever something feels unclear—we’ll provide the context, resources, or escalation you need while keeping your environment private and secure.
+Serving you well is core to the EDBB experience. Reach out whenever something feels unclear - we'll provide the context, resources, or escalation you need while keeping your environment private and secure.
