Documentation edits made through Mintlify web editor

--- a/acceptable-use-policy.mdx
+++ b/acceptable-use-policy.mdx
@@ -1,24 +1,22 @@
 ---
-title: "Acceptable Use Policy"
-sidebarTitle: "Usage Rules"
-description: "Review the conduct requirements for EDBB services, including disallowed content, security restrictions, and activities that lead to termination."
+title: "Acceptable Use Policy (AUP)"
+sidebarTitle: "Usage Rules (AUP)"
+description: "Use cases that violate EDBB's Acceptable Use Policy (AUP), including but not limited to child sexual abuse material, illegal content, and other prohibited activities."
 ---
 
-# Using EDBB Services Responsibly
+## **🔒 Prohibited Applications and Activities**
 
-<Info>
-  Every VPS order includes agreement to this Acceptable Use Policy (AUP). Breaches can lead to immediate suspension, data deletion, and—where required by law—reports to law-enforcement authorities.
-</Info>
+Our **Acceptable Use Policy (AUP)** explains the terms of using our services. You must comply with these policies and engage only in legal activities. The following violations will result in account termination or legal action:
 
-We split the rules into three quick-reference sections so you can confirm compliance at a glance.
-
----
+We split the rules into three quick-reference sections so you can confirm compliance easily.
 
 ## 1. Zero-Tolerance Offences
 
+The following violations will result in account termination or legal action:
+
 <CardGroup cols={2}>
-  <Card title="🚨 CSAM & Exploitation">
-    Hosting, relaying, or linking to child sexual abuse material results in instant termination and a report to authorities.
+  <Card title="🚨 Child Sexual Abuse Material CSAM">
+    - Hosting or distributing CSAM will lead to immediate account termination and reporting to authorities.
   </Card>
   <Card title="🦠 Malware & Botnets">
     Command-and-control servers, droppers, phishing kits, or similar tooling are removed on sight—no warnings.
@@ -27,13 +25,13 @@ We split the rules into three quick-reference sections so you can confirm compli
     Attempts to tamper with EDBB infrastructure or upstream carriers void your service agreement immediately.
   </Card>
   <Card title="🌪️ DDoS Operations">
-    Launching attacks, stress testing, or facilitating DDoS orchestration is prohibited.
+    Launching attacks (booter services), stress testing, or using our infrastructure for DOS attacks is prohibited.
   </Card>
   <Card title="🛍️ Counterfeit Commerce">
-    Storefronts selling fraudulent or trademark-infringing products are shut down.
+    - Hosting websites selling counterfeit products (e.g., Nike, Adidas, Moncler) leads to account suspension.
   </Card>
   <Card title="⛏️ Cryptocurrency Mining">
-    CPU, GPU, FPGA, or ASIC mining is not permitted on EDBB VPS plans.
+    Cryptocurrency mining activities are prohibited on EDBB VPS palns (and no longer profitable anyway)
   </Card>
 </CardGroup>
 
@@ -42,22 +40,23 @@ We split the rules into three quick-reference sections so you can confirm compli
 ## 2. Network & Platform Safeguards
 
 <CardGroup cols={2}>
-  <Card title="📨 Spam & Bulk Messaging">
-    Unsolicited email, SMS, or direct messages are disallowed. Verified complaints suspend the service; repeat offences result in cancellation without refund.
+  <Card title="📨 SPAM & Bulk Messaging">
+    Unsolicited email, SMS, or direct messages are not allowed. Verified complaints suspend the service; repeat offences result in cancellation without refund.
   </Card>
   <Card title="🧮 IPv6 Usage">
-    - Maximum of <strong>20 IPv6 addresses</strong> per VPS<br />
-    - Rapid rotation or randomized usage that stresses routing tables counts as abuse<br />
+    - Maximum of <strong>20 IPv6 addresses</strong>
+       per VPS
+    - Rapid rotation or randomized usage that stresses routing tables counts as abuse
     - Flooding the Neighbor Discovery cache triggers termination
   </Card>
-  <Card title="🕵️ Recon Scans">
-    Unauthorized port scans, vulnerability probes, or lateral movement attempts against third-party infrastructure are treated as hostile behaviour.
+  <Card title="🕵️ Scanning">
+    Unauthorized port scans, vulnerability probing against third-party infrastructure are not allowed. (Get in touch to obtain an exempt if you are a security firm conducting contractual work).
   </Card>
   <Card title="🛡️ TOR & Anonymity">
     Entry nodes and middle relays are allowed; TOR exit nodes, I2P outproxies, and similar egress services are forbidden.
   </Card>
   <Card title="💬 IRC Hosting">
-    IRC workloads attract abuse. Review the <a href="/faq/traffic-bandwidth/dos-attacks/advisory-for-high-risk-clients" target="_blank" rel="noreferrer">Advisory for High-Risk Clients</a> before deploying IRC infrastructure.
+    IRC workloads attract abuse. Review the Advisory for High-Risk Clients before deploying IRC infrastructure.
   </Card>
 </CardGroup>
 
@@ -65,24 +64,26 @@ We split the rules into three quick-reference sections so you can confirm compli
 
 ## 3. Content & Conduct Rules
 
+Users must respect the dignity, rights, and safety of others. The following activities are strictly forbidden and will result in immediate account termination:
+
 <CardGroup cols={2}>
   <Card title="📚 Intellectual Property">
-    Do not host or distribute copyrighted, patented, or trademarked materials without proper rights.
+    - Distributing, hosting, or endorsing content that infringes on intellectual property rights, including copyrights, trademarks, and patents.
   </Card>
   <Card title="🗞️ Defamation">
-    Avoid knowingly false statements that damage the reputation of individuals or organisations.
+    - Publishing or sharing knowingly false information that damages the reputation of individuals or organizations.
   </Card>
   <Card title="🔐 Privacy">
-    No doxxing, non-consensual imagery, or publishing of personal data without permission.
+    - Unauthorized sharing of private information, images, videos, or other content that violates personal privacy.
   </Card>
   <Card title="💙 Self-Harm Advocacy">
     Content that promotes, instructs, or glorifies self-harm or suicide is not allowed.
   </Card>
   <Card title="🚫 Extremist Content">
-    Propaganda that encourages violence, radicalisation, or discrimination is prohibited.
+    - Distributing or endorsing materials that promote radical ideologies, hate speech, or discrimination.
   </Card>
   <Card title="⚖️ Illegal Content">
-    Any material that breaches applicable laws must not be hosted on EDBB infrastructure.
+    Hosting any illegal content (e.g. "warez") will result in account suspension.
   </Card>
 </CardGroup>
 
