Documentation edits made through Mintlify web editor

--- a/acceptable-use-policy.mdx
+++ b/acceptable-use-policy.mdx
@@ -91,7 +91,7 @@ Users must respect the dignity, rights, and safety of others. The following acti
 
 ## Staying Compliant
 
-- Keep your contact details current so you can respond quickly to abuse notifications.
+- Keep your contact details up-to-date so you can respond quickly to abuse notifications.
 - Apply strong passwords, MFA, and regular patching to prevent compromised workloads.
 - Unsure about an edge case? Contact EDBB Support for clarification before deploying.
 
