Documentation edits made through Mintlify web editor

--- a/acceptable-use-policy.mdx
+++ b/acceptable-use-policy.mdx
@@ -55,7 +55,7 @@ The following activities are  forbidden and will lead to account suspension or t
     Entry nodes and middle relays are allowed; TOR exit nodes, I2P outproxies, and similar egress services are forbidden.
   </Card>
   <Card title="💬 IRC Hosting">
-    IRC workloads attract abuse. Review the Advisory for High-Risk Clients before deploying IRC infrastructure.
+    IRC workloads attract abuse. Review the [Advisory](https://docs.edbb.com//faq/traffic-bandwidth/dos-attacks/advisory-for-high-risk-clients) for High-Risk Clients before deploying IRC infrastructure.
   </Card>
   <Card title="⛏️ Cryptocurrency Mining">
     Cryptocurrency mining activities are prohibited on EDBB VPS plans (and no longer profitable anyway)
