Documentation edits made through Mintlify web editor

--- a/acceptable-use-policy.mdx
+++ b/acceptable-use-policy.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Usage Rules (AUP)"
 description: "Use cases that violate EDBB's Acceptable Use Policy (AUP), including but not limited to child sexual abuse material, illegal content, and other prohibited activities."
 ---
 
-## **🔒 Prohibited Applications and Activities**
+## 🔒 Prohibited Applications and Activities
 
 Our **Acceptable Use Policy (AUP)** explains the terms of using our services. You must comply with these policies and engage only in legal activities. The following violations will result in account termination or legal action:
 
@@ -25,7 +25,7 @@ The following violations will result in account termination or legal action:
     Attempts to tamper with EDBB infrastructure or upstream carriers void your service agreement immediately.
   </Card>
   <Card title="🌪️ DDoS Operations">
-    Launching attacks (booter services), stress testing, or using EDBB infrastructure for DOS attacks is prohibited.
+    Launching attacks (booter services), any kind of stress testing, or using EDBB infrastructure for attacks is prohibited.
   </Card>
   <Card title="🛍️ Counterfeit Commerce">
     - Hosting websites selling counterfeit products (e.g., Nike, Adidas, Moncler) leads to account suspension.
@@ -43,8 +43,8 @@ The following activities are  forbidden and will lead to account suspension or t
     Unsolicited email, SMS, or direct messages are not allowed. Verified complaints suspend the service; repeat offences result in cancellation without refund.
   </Card>
   <Card title="🧮 IPv6 Usage">
-    - Maximum of <strong>10 IPv6 addresses</strong>
-       per VPS
+    - Maximum of <strong>10 simultaneously configured IPv6 addresses</strong>
+       per VPS.
     - Rapid rotation or randomized usage (random IPv6 proxies) are not allowed.
     - Flooding the Neighbor Discovery cache leads to account termination.
   </Card>
