Documentation edits made through Mintlify web editor

--- a/backups.mdx
+++ b/backups.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Backup Policy"
 description: Understand your role in safeguarding VPS data and learn how to request image exports when needed.
 ---
 
-# Protecting Your VPS Data
+## Protecting Your VPS Data
 
 <Info>
   EDBB keeps the hypervisor stable but does <strong>not</strong> ship VPS plans with automatic snapshots or backups. You decide how, where, and how often to protect your own data.
