--- a/windows-remote-desktop.mdx
+++ b/windows-remote-desktop.mdx
@@ -6,7 +6,7 @@ description: "Launch Remote Desktop from Windows or macOS to reach your EDBB Win
 
 import { CtaButton } from "/snippets/cta-button.mdx";
 
-# Connect to Your Windows VPS
+## Connect to Your Windows VPS
 
 <Info>
   Remote Desktop Protocol (RDP) delivers full graphical control of your Windows VPS. Bring the server’s IPv4 address, the <code>Administrator</code> password you set in the portal, and a stable network connection.
