--- a/how-our-support-team-helps-you.mdx
+++ b/how-our-support-team-helps-you.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Support Scope"
 description: "Understand how EDBB Support assists with billing, troubleshooting guidance, and escalation, while respecting your privacy and system boundaries."
 ---
 
-# Meet the EDBB Support Desk
+## Meet the EDBB Support Desk
 
 <Info>
   Our support team is your first point of contact for all billing-related inquiries and technical assistance. We’re here to provide quick and effective solutions and expert guidance, ensuring a smooth experience.
